# exam_extractors

./: .gitignore  README.MD  README.md  pyproject.toml  requirements.txt
scripts/: scrape_nursing.py  scrape_school_exams.py  scrape_strath_exams_2.py  splitter.py
src/timetable_scrapers/: __init__.py  professor_contract.py  registry.py  schemas.py
src/timetable_scrapers/base/: __init__.py  field_mapper.py  scraper.py  validators.py
src/timetable_scrapers/scrapers/: __init__.py
src/timetable_scrapers/scrapers/daystar/: __init__.py  scraper.py
src/timetable_scrapers/scrapers/kca/: __init__.py  scraper.py
src/timetable_scrapers/scrapers/nursing/: __init__.py  exam_scraper.py  scraper.py
src/timetable_scrapers/scrapers/school/: __init__.py  exam_scraper.py
src/timetable_scrapers/scrapers/strath/: __init__.py  scraper.py
src/timetable_scrapers/utils/: __init__.py  convert_xls_to_xlsx.py  datetime_parser.py  excel_helpers.py  structured_datetime.py  time_formatter.py  time_parser.py
tests/: test_professor_contract.py  test_registry.py  test_time_parser.py  test_utils_datetime_parser.py
