[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timetable-scrapers"
version = "0.1.0"
description = "Package for scraping exams from TT for various institutions"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Samuel Ngigi", email = "ngigi.nyongo@gmail.com" }]
keywords = ["timetable", "scraper", "excel", "parser"]

dependencies = ["openpyxl>=3.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["timetable_scrapers*"]

[tool.black]
line-length = 80
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
